--- a/Vite_App/src/Components/Meal.css
+++ b/Vite_App/src/Components/Meal.css
@@ -1,11 +1,71 @@
+.navtext {
+    padding: 5px 15px; 
+    text-align: center;
+    text-transform: uppercase; 
+  }
+ 
+  .navimage{
+    text-align: center;
+    font-size: 50px;
+    font-weight: 800;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    background-image: url("https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png");
+    width: 90%;
+    height: 400px;
+    letter-spacing: 3px;
+    padding-top: 100px;
+    margin-left: 5%;
+    
+    
+  }
+   .navimage   .suntext
+   {
+    font-family: Arial, Helvetica, sans-serif;
+   }
+
 .meal{
     color: black;
 }
+.mainmeal{
+    margin: 40px 50px 0px 150px;
+}
 .mealform{
     position: sticky; 
-    top: 80px;
+    top: 20px;
     z-index: 1000;
+    margin: 20px 0px 30px 430px;
+
 }
 .display{
     display: grid;
+    grid-template-columns: auto auto auto auto;
+
+}
+.mealsearch{
+
+    height: 52px;
+width: 700px;
+border-radius: 10px;
+
+}
+.btn{
+    height: 52px;
+    width: 52px;
+    
+
+}
+.btn img{
+    height: 40px;
+    width: 40px;
+}
+.meal-item{
+    height: 300px;
+    width: 400px;
+    
+}
+.meal-item img{
+    height: 200px;
+    width: 300px;
+    border-radius:15px;
 }
